# MRI_MRF

./: BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CONCEPT.md  CONCEPT_EN.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
docs/: SPACE_GATE_EVOLUTION_ROADMAP.md  SYSTEM_STACK.md
examples/: README.md  README_EN.md  factory_handoff_demo.py  full_scenario.py  space_gate_datacenter_demo.py  space_gate_evolution_demo.py  system_stack_demo.py
magnetic_resonance/: __init__.py  athena_stage.py  bloch_signal.py  cli.py  contracts.py  ecosystem_bridges.py  foundation.py  gate_resonance.py  gate_topology.py  gradient_system.py  lagrange_stability.py  larmor.py  magnetic_confinement.py  mri_screening.py  plasma_transport.py  rf_energy_transfer.py  rf_pulse.py  sar_safety.py  snr_model.py  space_gate_datacenter.py  space_gate_evolution.py  thermal_transport.py  toroidal_geometry.py
scripts/: cleanup_generated.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: test_magnetic_resonance.py
